# ChangeLog for media-sound/mpg123
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/mpg123/ChangeLog,v 1.170 2008/12/16 19:25:19 armin76 Exp $

  16 Dec 2008; Raúl Porcel <armin76@gentoo.org> mpg123-1.6.2.ebuild:
  ia64 stable wrt #250666

  16 Dec 2008; Jeroen Roovers <jer@gentoo.org> mpg123-1.6.2.ebuild:
  Stable for HPPA (bug #250666).

  15 Dec 2008; <ssuominen@gentoo.org> mpg123-1.6.2.ebuild:
  x86 stable wrt #250666

  13 Dec 2008; Thomas Anderson <gentoofan23@gentoo.org> mpg123-1.6.2.ebuild:
  stable amd64, bug 250666

  12 Dec 2008; Joseph Jezak <josejx@gentoo.org> mpg123-1.6.2.ebuild:
  Marked ppc/ppc64 stable for bug #250666.

  12 Dec 2008; Tobias Klausmann <klausman@gentoo.org> mpg123-1.6.2.ebuild:
  Stable on alpha, bug #250666

  12 Dec 2008; Ferris McCormick <fmccor@gentoo.org> mpg123-1.6.2.ebuild:
  Sparc stable, Bug #250666.

*mpg123-1.6.2 (16 Nov 2008)

  16 Nov 2008; Peter Alfredsen <loki_val@gentoo.org> +mpg123-1.6.2.ebuild:
  bumb

*mpg123-1.6.1 (10 Nov 2008)

  10 Nov 2008; Alexis Ballier <aballier@gentoo.org> +mpg123-1.6.1.ebuild:
  version bump, by Andrej Gelenberg <a_gel@web.de>, bug #245997

*mpg123-1.5.1 (08 Sep 2008)

  08 Sep 2008; Alexis Ballier <aballier@gentoo.org> +mpg123-1.5.1.ebuild:
  version bump

*mpg123-1.5.0 (08 Aug 2008)

  08 Aug 2008; Alexis Ballier <aballier@gentoo.org> metadata.xml,
  +mpg123-1.5.0.ebuild:
  version bump

  28 May 2008; Alexis Ballier <aballier@gentoo.org> -mpg123-1.4.1.ebuild,
  -mpg123-1.4.2.ebuild:
  remove old

*mpg123-1.4.3 (27 May 2008)

  27 May 2008; Alexis Ballier <aballier@gentoo.org> +mpg123-1.4.3.ebuild:
  version bump

  17 May 2008; Alexis Ballier <aballier@gentoo.org> mpg123-1.4.2.ebuild:
  keyword ~x86-fbsd

  17 May 2008; Samuli Suominen <drac@gentoo.org> mpg123-1.3.1.ebuild,
  mpg123-1.4.1.ebuild, mpg123-1.4.2.ebuild:
  Move mpg123 to new-style virtual.

*mpg123-1.4.2 (11 May 2008)
