@@ -1,14 +1,8 @@
 DIST mpg123-1.3.1.tar.bz2 1013863 RMD160 f42ae7c8981938fd3c187e0eaa9bbec229aac378 SHA1 76d7392b1874823b227b1e9c5fd486de33a8637f SHA256 36ffe1ff2246da8606c35f5199f439d969da20eadeb2c4ef4278c7aca8f88a5d
-DIST mpg123-1.4.3.tar.bz2 1021292 RMD160 7c79521b7323f10f340fad4190cfe4ff14e489f9 SHA1 0bc78ab50908228692c283ac03f164e05c406117 SHA256 f6480c1ff2e0b60187e921c7bee2086ecc0fb34b9953d3157cd48969f1808067
-DIST mpg123-1.5.0.tar.bz2 1032618 RMD160 15a3b39ff08844f4d287d652e21e4509755d72c1 SHA1 c91f7fc1bd23bb104cf80341a55cfc2623d69535 SHA256 023f886ee465eb2d5c45403d150da1b34d476d082583fbb36773ccb1dde1e8cf
-DIST mpg123-1.5.1.tar.bz2 1033406 RMD160 aeaf5ab770eeb66826d81ba3d840492709b2c7a5 SHA1 4e85388294c5c432bd899bb910694dd259e76679 SHA256 c9e48bb55d9a5e13686298ad0349c909a4c404dc9c0669c71d93e03c61990a0e
-DIST mpg123-1.6.1.tar.bz2 1054159 RMD160 768100028e92cf585c8635dc3285b2372950df8e SHA1 8dbd6ae3e50190faefe91fc1d92bf3603b89383d SHA256 16fc17600641df8eb6feceddb73b73988158215f2322d97484b8dc17c1d343a1
 DIST mpg123-1.6.2.tar.bz2 1053596 RMD160 65d1718eba5c4bf251e55cf0906848d50a250a20 SHA1 cdb0a98f6b85cfc89545e11063f699dcbdf30fea SHA256 94c76c748e4a1c78a1492fa5e5d01db9cce8dd67ec18af106158b1254ae4d771
+DIST mpg123-1.6.4.tar.bz2 1055119 RMD160 d497e5642f2841ece9bf9ed12a839f5417d85efb SHA1 d6f1ce6ce251d554992f7eae16a883bfcbc1021a SHA256 94acb66cdb1f4bf2349729767de8edd46cd58863fc1682f2771fc5fc758354ae
 EBUILD mpg123-1.3.1.ebuild 2038 RMD160 f46021b5ba9cdb409b0c916019e14f5f3a547fc8 SHA1 deaa87dab2fb2a8ff5bb06c84ce7cf3e1ca5db0a SHA256 8d427c87b27c8e723be652d97fbaff666fbbeafd8e77234900af4c8a5c60c862
-EBUILD mpg123-1.4.3.ebuild 2096 RMD160 652d44e2e22ca4f57eb9c86bcb92e7a8c8790bc3 SHA1 02dce4c872caa6a9b88098c7d1d04d877caca23a SHA256 76d9ef02cba7fdb934fa627f4a768d70d3f206765f09455ca2838aa70cb6ab84
-EBUILD mpg123-1.5.0.ebuild 2158 RMD160 6f9373db62ffd1c88c8ab48db0e8dc39f208297a SHA1 22c2b7e70734c55ea4ac6cf998d7c7540f944cdb SHA256 563fc3a45278bae87a883d6680072ff5adc3e60bbfc6d054d8ee0c793c40fe77
-EBUILD mpg123-1.5.1.ebuild 2171 RMD160 b82a9af118cf6671289fa31b43b5e204581759db SHA1 4f8d6286c2aedfd8a2d9633a26dca8a978932fb6 SHA256 739ce82bef1cd4b613e780abcbddd0f4a538ed261bf711ef0617abab4dcadec9
-EBUILD mpg123-1.6.1.ebuild 2171 RMD160 8b3948592badcc9ed211c304ce0fa654e8c870ba SHA1 1422e85148bfdda22548136ec620026af24fc1d7 SHA256 56e8d3cd574b631391190976bdaef99c2384a2324b3842afb1c6564a38adba99
 EBUILD mpg123-1.6.2.ebuild 2170 RMD160 c25b7db7e58a80d39249dbb1d0074a13416b73d1 SHA1 d3f021e858f36edb847875f50ce2c49a7d9df39e SHA256 f0ffb81a35ce26f74ed8dafccf5f8ffdc3d6503ce67ca01669d3833ac63f7739
-MISC ChangeLog 24399 RMD160 ab8f89c9a22e572700b5d4a16bf1575c1ca76620 SHA1 0f6311919af0b2cebbc7d7529030c0713183f661 SHA256 492b0e6649c5c90ad4d516914c2ce3979a0a9bc1c5767f783836cee137e25529
+EBUILD mpg123-1.6.4.ebuild 2171 RMD160 04b3f67883a796e977ed83f156557b5124fd8669 SHA1 5ce7e8cd1485d6258a7a708a8333da2cc6ab1672 SHA256 5b68e885851f6f69fba472944cf953b5503093045ec97e520d05fd515b42c8f2
+MISC ChangeLog 24519 RMD160 d82e822bd677035cb5fb98125a35240b3174a8a0 SHA1 a7f5c27181d18d4cd056aa71e2b1de18a1914a31 SHA256 a751690f55e19bb1ffad97c0b98188d83ef91d8d5d693bdf570df01d4e76ac0b
 MISC metadata.xml 324 RMD160 9a963eb8595a1ead893f4d4e376e84e8ff0cd9b8 SHA1 775f3832ff03ac2e6d037b5f1a6acceafc196fee SHA256 eb7ba00d13fe89820a740dfd2e729eb15c7d087cc0fb89064725cff9338d9b3d
